// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [client] 1`] = `
"

const name_0 = \\"Todos\\"
const connectorName_0 = \\"Todos\\"
const resolvers_0 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

export default readModels
"
`;

exports[`base config works correctly [server] 1`] = `
"
import resolvers_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"
import projection_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value

const name_0 = \\"Todos\\"
const connectorName_0 = \\"Todos\\"
const resolvers_0 = resolvers_0_instance
const projection_0_hash = \\"6d3179fda9d74d708b6b165822d7235701400a7810ee4a714b300717d6c27ed1e02fbbd5c76f0a318cdc20951b86f9be6ab10077662ed590d519c7e3a20e930f\\"
const projection_0 = projection_0_instance

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
, connectorName: connectorName_0
, projection: projection_0
, invariantHash: projection_0_hash
})

export default readModels
"
`;

exports[`base(v2) config works correctly [client] 1`] = `
"

const name_0 = \\"Todos\\"
const connectorName_0 = \\"Todos\\"
const resolvers_0 = {
  todos() {},
  items() {}
}
const name_1 = \\"Items\\"
const connectorName_1 = \\"Items\\"
const resolvers_1 = {

}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

readModels.push({
  name: name_1
, resolvers: resolvers_1
})

export default readModels
"
`;

exports[`base(v2) config works correctly [server] 1`] = `
"
import resolvers_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"
import projection_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_1_constructor from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolversAsModule.js\\"
import resolvers_1_import_testCommandsAsModule from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testCommandsAsModule.js\\"
import projection_1_constructor from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjectionAsModule.js\\"
import projection_1_import_testCommandsAsModule from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testCommandsAsModule.js\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value

const name_0 = \\"Todos\\"
const connectorName_0 = \\"Todos\\"
const resolvers_0 = resolvers_0_instance
const projection_0_hash = \\"6d3179fda9d74d708b6b165822d7235701400a7810ee4a714b300717d6c27ed1e02fbbd5c76f0a318cdc20951b86f9be6ab10077662ed590d519c7e3a20e930f\\"
const projection_0 = projection_0_instance
const name_1 = \\"Items\\"
const connectorName_1 = \\"Items\\"
const resolvers_1_imports = { [\\"testCommandsAsModule\\"]: resolvers_1_import_testCommandsAsModule }
const resolvers_1_options = {}
const resolvers_1 = resolvers_1_constructor(
      resolvers_1_options,
      resolvers_1_imports
    )
const projection_1_constructor_hash = \\"91e66947c1822c1063852c01d7fd814b534b22105c2c12e77d101adeac5fc3592e15f2539adb58f6f01b6b97c89c5f6e9c08d7b9906b618a43887e48c582f3f8\\"
const projection_1_import_testCommandsAsModule_hash = \\"565764fc773c10508b7a8c6968116e7c0317589285d14bddb2bee33e25887530a3723967c40b23e4a5c798a54e6e922ac228f8eaaae82fa247fce9740008af64\\"
const projection_1_imports = { [\\"testCommandsAsModule\\"]: projection_1_import_testCommandsAsModule }
const projection_1_imports_hash = ((content) => {
  const hmac = __non_webpack_require__('crypto')
    .createHmac('sha512', \\"resolve-read-model-projection-hash\\")
  hmac.update(content)
  return hmac.digest('hex')
})(JSON.stringify([projection_1_import_testCommandsAsModule_hash
        ]))
const projection_1_options = {}
const projection_1_options_hash = ((content) => {
  const hmac = __non_webpack_require__('crypto')
    .createHmac('sha512', \\"resolve-read-model-projection-hash\\")
  hmac.update(content)
  return hmac.digest('hex')
})(JSON.stringify(projection_1_options))
const projection_1 = projection_1_constructor(
      projection_1_options,
      projection_1_imports
    )
const projection_1_hash = ((content) => {
  const hmac = __non_webpack_require__('crypto')
    .createHmac('sha512', \\"resolve-read-model-projection-hash\\")
  hmac.update(content)
  return hmac.digest('hex')
})(JSON.stringify([
          projection_1_constructor_hash,
          projection_1_options_hash,
          projection_1_imports_hash
        ]))

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
, connectorName: connectorName_0
, projection: projection_0
, invariantHash: projection_0_hash
})

readModels.push({
  name: name_1
, resolvers: resolvers_1
, connectorName: connectorName_1
, projection: projection_1
, invariantHash: projection_1_hash
})

export default readModels
"
`;

exports[`config + process.env works correctly [client] 1`] = `
"

const name_0 = \\"Todos\\"
const connectorName_0 = undefined
const resolvers_0 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

export default readModels
"
`;

exports[`config + process.env works correctly [server] 1`] = `
"
import resolvers_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"
import projection_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value

const name_0 = \\"Todos\\"
const connectorName_0 = undefined
const resolvers_0 = resolvers_0_instance
const projection_0_hash = \\"6d3179fda9d74d708b6b165822d7235701400a7810ee4a714b300717d6c27ed1e02fbbd5c76f0a318cdc20951b86f9be6ab10077662ed590d519c7e3a20e930f\\"
const projection_0 = projection_0_instance

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
, connectorName: connectorName_0
, projection: projection_0
, invariantHash: projection_0_hash
})

export default readModels
"
`;
